# FastAPI

./: .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml  tasks.db
fast_api/: __init__.py  app.py  database.py  models.py  repository.py  router.py
